# zmeika

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
dep/: dep.cmake
dep/Modules/: Modules.cmake
dep/Modules/AppData/: shader.cmake  shaderData.hpp
dep/Modules/Flags/: Flags.cmake  Flags.cppm
dep/Modules/GLFW/: glfw.cmake  glfw.cppm  glfw_enums.cppm  glfw_win32_window.cppm  madmap.cppm
dep/Modules/GLM/: glm.cmake
dep/Modules/Shaders/: shaders.cmake  shaders_compiler.cppm  vk_shader_iface.cppm
dep/Modules/Vulkan/: vulkan.cmake  vulkan.cppm  vulkan_helpers.cppm  vulkan_video.cppm
dep/Modules/Win/: win.cmake  win.cppm  win_cpp.cppm  win_def.hpp  win_enums.cppm  win_hid_usage.cppm
dep/Modules/std/: modules.json  std.cmake  std.compat.cppm  std.cppm
dep/Modules/vkCube/: vkCube.cmake  vkCube.cppm  vkCube_data.cppm  vkCube_shaders_data.cppm  vkCube_shaders_sources.cppm
